Fix deprecation warnings for primitive type wrappers
Use valueOf() instead of new for Integer/Character/Double etc. to get
rid of deprecation warnings.